--- a/client/src/Main/Register.css
+++ b/client/src/Main/Register.css
@@ -1,14 +1,23 @@
 .Reg {
-    background-color: aliceblue;
+    /* background-color: aliceblue; */
     font-family: 'Times New Roman', Times, serif;
     margin: center;
     margin-left: 38%;
     margin-right: 38%;
-    margin-top: 5%;
+    margin-top: 10%;
+    position: center;
     padding: center;
-    border-radius: 7%;
   }
 
   .form{
     text-align: center;
+  }
+
+  .form input{
+    position: relative;
+    background: white;
+    border-color: aliceblue;
+    /* box-shadow: 2px; */
+    font-size: 15px;
+    padding: 5px;
   }
